--- a/readme.rmd
+++ b/readme.rmd
@@ -21,9 +21,9 @@ knitr::opts_chunk$set(
 
 ## What?
 
-This is a collection of colour palettes based on 90s pop album covers.
+This is a collection of colour palettes based on (mainly) 90s pop album covers.
+(The Bangles are in because 'Hazy Shade of Winter' absolutely rules)
 
-Some of these appeared frequently in web searches, so they must be good.
 
 Featuring: 
 
