--- a/readme.rmd
+++ b/readme.rmd
@@ -31,7 +31,6 @@ Featuring:
 - Bangles
 - Beck
 - Betty Boo
-- Breeders
 - B*Witched
 - Deee Lite
 - Hole
@@ -39,6 +38,7 @@ Featuring:
 - S Club 7
 - Spice Girls
 - Steps
+- A special secret palette
 
 ## Why?
 
@@ -69,24 +69,24 @@ pop_palette("beck")
 
 ```{r boo, fig.show = "hold",out.width = "33%"}
 pop_palette("boo")
-pop_palette("breeders")
 pop_palette("bwitched")
+pop_palette("deeelite")
 ```
 
 
 
 ```{r deeelite, fig.show = "hold",out.width = "33%"}
-pop_palette("deeelite")
 pop_palette("hole")
 pop_palette("nodoubt")
+pop_palette("sclub7")
 ```
 
 
 
 ```{r sclub, fig.show = "hold",out.width = "33%"}
-pop_palette("sclub7")
 pop_palette("spice")
 pop_palette("steps")
+pop_palette("secret")
 ```
 
 
@@ -107,3 +107,6 @@ project you agree to abide by its terms.
 ## Contributing
 
 See the [Contribution guide](.github/CONTRIBUTING.md)
+
+## What's the secret palette?
+See [here](https://www.pinterest.com/pin/361836151304495026/)
